# elexon

./: .gitignore  LICENSE  README.md  api.py  deploy_to_pypi.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml
elexon/: __init__.py  __main__.py  api.py  cli.py  elexon.py  exceptions.py  methods.py  parsers.py
elexon/models/: settlementperiod.py
pyelexon/: api.py
tests/: test_B1610.py  test_elexon.py  test_exception.py  test_methods.py  test_parsers.py
