[metadata]
name = elexon
version = 0.2.2
author = Michael Kavanagh
author_email = michael@michaelkavanagh.me
description = A simple wrapper for the Elexon BMRS API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MichaelKavanagh/elexon
project_urls =
    Bug Tracker = https://github.com/MichaelKavanagh/elexon/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = elexon
packages = find:
python_requires = >=3.6

[options.packages.find]
where = elexon

[options.entry_points]
console_scripts =
    elexon = elexon:main